tcf_website/static/reviews/review.css
.review-content .review-text-body {
  white-space: pre-line;
}

.review-content .review-text-body.collapse:not(.show) {
  display: block;
  height: 12rem;
  overflow: hidden;
}
.review-content .review-text-body.collapsing {
  height: 12rem;
}

.review-content a.collapsed::after {
  content: '...See More';
  color: var(--secondary-color);
}

.review-content a:not(.collapsed)::after {
  content: 'See Less';
  color: var(--secondary-color);
}

.review .upvote, .review .downvote {
    font-size: 2rem;
    color: #aaa;
    cursor: pointer;
}

.review .upvote.active, .review .upvote:hover {
    color: rgb(220, 72, 36);
}

.review .downvote.active, .review .downvote:hover {
    color: dodgerblue;
}

